--- a/chess/Properties/Resources.resx
+++ b/chess/Properties/Resources.resx
@@ -136,6 +136,9 @@
   <data name="black_rook" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\piece\black_rook.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Chess" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\chess.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="white_bishop" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\piece\white_bishop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
